Fix Nav Link misalignment

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -117,6 +117,7 @@
   font-size: 12px;
   padding: 4px;
   margin-right: 10px;
+  margin-top: 0;
 }
 .scrolled .navigation-links a svg:hover + .help {
   opacity: 1;
